# newyearseve-formula

./: README.md  newyear.html
newyearseve-formula/: Cargo.toml  UPGRADE.md  out.txt
newyearseve-formula/src/: algorithm.rs  dispositions.rs  formula.rs  integer_pack.rs  main.rs  postfix_to_infix.rs  unpack.rs
