[package]
name = "newyearseve-formula"
version = "0.1.0"
authors = ["Daniele Olmisani <mad4j@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.15.0"
itertools = "0.10.0"
rayon = "1.5.0"
