[package]
name = "newyearseve-formula"
version = "0.1.0"
authors = ["Daniele Olmisani <daniele.olmisani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intpackit = "0.1"
colored = "2.0"
indicatif = "0.15"
itertools = "0.10"
structopt = "0.3"
evalexpr = "8.1"