[package]
name = "newyearseve-formula"
version = "0.1.0"
authors = ["Daniele Olmisani <daniele.olmisani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intpackit = "0.1"
colored = "2.1.0"
indicatif = "0.17.9"
itertools = "0.13.0"
structopt = "0.3"
evalexpr = "12.0.1"